[package]
name = "sketch-csgrs"
version = "0.1.1"
edition = "2024"
description = "Create one or more cubes with an optional tube in the center"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }

[dependencies.csgrs]
default-features = false
path = "../csgrs"
# ATM f32 doesn't compile
#features = ["f32", "stl-io", "dxf-io", "truetype-text", "hershey-text", "chull-io", "image-io", "metaballs", "hashmap", "sdf", "offset", "earcut"]
features = ["f64", "stl-io", "dxf-io", "truetype-text", "hershey-text", "chull-io", "image-io", "metaballs", "sdf", "offset", "earcut"] #, "hashmap"
